[gd_scene load_steps=8 format=2]

[ext_resource path="res://Object/2DCoordinateRenderer.gd" type="Script" id=1]
[ext_resource path="res://Object/2DFunctionObject.gd" type="Script" id=2]
[ext_resource path="res://Object/2DDrawAreaObject.gd" type="Script" id=3]
[ext_resource path="res://Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Linear.tres" type="Resource" id=5]
[ext_resource path="res://Area.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
length = 11.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Coordinate2DObject:Scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 11 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 50 ), Vector2( 2000, 2000 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Coordinate2DObject" type="Node2D" parent="."]
position = Vector2( 50, 50 )
script = ExtResource( 1 )
Rect = Rect2( 0, 0, 1800, 1000 )
Center = Vector2( 600, 500 )
LineWidth = 1.0
RuleWidth = 25.0
RuleFont = ExtResource( 4 )

[node name="DrawArea2DObject" type="Node" parent="Coordinate2DObject"]
script = ExtResource( 3 )
Points = PoolVector2Array( 0, 0, 0, 10, 10, 0 )
LineColor = Color( 0.839216, 0.188235, 0.188235, 0.27451 )

[node name="Function2DObject" type="Node" parent="Coordinate2DObject"]
script = ExtResource( 2 )
Function = ExtResource( 5 )
FunctionRange = Vector2( -15, 30 )
StepCount = 500
LineWidth = 5.0
LineColor = Color( 0.839216, 0.188235, 0.188235, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "新建动画"
"anims/新建动画" = SubResource( 1 )
